fix header style and align hero content to center

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ a{
 
 .container{
     display: flex;
-    max-width: var(--max-width);
+    max-width: calc(var(--max-width) - (var(--content-offset) * 2));
     margin: 0 auto;
 }
 
@@ -155,6 +155,11 @@ a{
 
 /* #region main */ 
 
+main{
+    display: flex;
+    height: 100%;
+}
+
 h2{
     font-size: 40px;
     font-weight: 200;
@@ -254,7 +259,7 @@ h1{
 
 @keyframes marquee {
     0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); } /* Moves halfway so the second span takes over */
+    100% { transform: translateX(-50%); } 
 }
 
 /* #endregion */
@@ -344,5 +349,9 @@ h1{
 
     #socials_container{
         right: var(--content-offset);
+    }
+
+    .container{
+        margin: 0 var(--content-offset);
     }
 }
